
CHANGELOG for cope

This file lists all changes relevant for the user - especially all
API changes and new features recommended for most users. The log may
omit bug fixes.
The items are sorted inversely, i.e. lastest items are on top

--------------------------------------------------------------------------
* make Pattern.getSource[Fields|Types] final
* allow serialization/deserialization of:
		* Model
		* Type
		* Feature and its subclasses
		* Items of unbound Types (see Type.isBound)
	To make serialization work, you need to enable it at the model. Otherwise
	a NotSerializableException is thrown when trying to deserialize.
	For any model defined like this:
	
		static final Model model = new Model(Aaa.TYPE, Bbb.TYPE, ...);
	
	add the following code immediately below:
	
		static
		{
			model.enableSerialization(Main.class, "model");
		}
	
	where "model" is the name of the static final field, the model is assigned to,
	and Main is the class of that field.
	
* CopeAssert.reserialize checks for exact expected size, not for maximum
	this breaks backwards API compatibility, but affects junit tests only
* instrumentor generates minimal method names for feature "defaultFeature"
* Resizing with ImageMagick works on Windows. 
	On Windows, install ImageMagick, and set the system properties com.exedio.cope.media.imagemagick (to "true") and 
	com.exedio.cope.media.convertcommand (to the absolute path of the convert binary).
* bugfix: Model failed on second connect, if there was a IntegerField.defaultToNext
* add MediaPath.Locator
	affects instrumented code
* allow optional EnumField on Enum with one value only
* Item implements Comparable
* Type implements Comparable
* Price implements Comparable
* add Model#isConnected()
* rename Model.getProperties() to getConnectProperties()
	deprecated version is provided
* flush sequences in checkEmptySchema, fixes CopeTest
* remove Model.flushSequences()
	deprecated version is provided
* added conditions CompositeField.is[Not]Null()