@@ -61,7 +61,7 @@ public class EnumMapFieldTest extends AbstractRuntimeTest
 		assertEquals("nameDE", item.name.getField(DE).getName());
 		assertSame(item.TYPE, item.name.getField(DE).getType());
 		assertEquals(item.name, item.name.getField(DE).getPattern());
-		assertEqualsUnmodifiable(list(item.name.getField(DE), item.name.getField(EN), item.name.getField(PL)), item.name.getSourceFields());
+		assertEqualsUnmodifiable(list(item.name.getField(DE), item.name.getField(EN), item.name.getField(PL)), item.name.getSourceFeatures());
 
 		assertEqualsUnmodifiable(
 				list(
