@@ -61,6 +61,7 @@ public class PackageTest extends TestCase
 		suite.addTestSuite(RangeTest.class);
 		suite.addTestSuite(RangeFieldTest.class);
 		suite.addTestSuite(PatternTest.class);
+		suite.addTestSuite(RecursiveTest.class);
 		return suite;
 	}
 }
