@@ -7,6 +7,7 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* allow arbitrary Feature as source of Pattern, not Field only
 * make Pattern.getSource[Fields|Types] final
 * allow serialization/deserialization of:
 		* Model
